Authguard fix NS service Reset forget password

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -4,7 +4,7 @@
         <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="oldPassword">
-              <input type="password" name="oldPassword" class="form-control" value="" formControlName="oldPassword" placeholder="Old Password:">
+              <input type="password" name="oldPassword" class="form-control" value="" formControlName="oldPassword" placeholder="Old Password">
             </label>
           </div>
           <div *ngIf="oldPassword.invalid && (oldPassword.dirty || oldPassword.touched)" class="alert alert-danger">
@@ -13,7 +13,7 @@
     
           <div class="form-group">
             <label for="newPassword">
-              <input type="password" name="newPassword" class="form-control" value="" formControlName="newPassword" placeholder="new Password:">
+              <input type="password" name="newPassword" class="form-control" value="" formControlName="newPassword" placeholder="New Password">
             </label>
           </div>
           <div *ngIf="newPassword.invalid && (newPassword.dirty || newPassword.touched)" class="alert alert-danger">
@@ -22,7 +22,7 @@
     
           <div class="form-group">
             <label for="newPasswordAgain">
-              <input type="password" name="newPasswordAgain" value="" class="form-control" formControlName="newPasswordAgain" placeholder="new Password:">
+              <input type="password" name="newPasswordAgain" value="" class="form-control" formControlName="newPasswordAgain" placeholder="Confirm new Password">
             </label>
           </div>
           <div *ngIf="newPasswordAgain.invalid && (newPasswordAgain.dirty || newPasswordAgain.touched)" class="alert alert-danger">
