--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
       <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
         Password is required
       </div>
-
+      <span class="psw">Forgot <a routerLink="/forgetpassword">password?</a></span>
 
       <div *ngIf="showError" class="alert alert-danger">
         {{ showMessage }}
