--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -5,6 +5,38 @@
   </nav>
 
   <nav id="content" style="margin: auto">
+    <div class="loading-splash">
+      <div class="container-umbel-logo">
+        <svg class="umbel-logo" viewBox="0 0 512 512">
+          <path class="dot dot-second animated" d="M300.75,44.667c0,24.708-20.042,44.729-44.708,44.729c-24.75,0-44.709-20.021-44.709-44.729  C211.333,20,231.292,0,256.042,0C280.708,0,300.75,20,300.75,44.667z"/>
+          <path class="dot dot-third animated" d="M423.333,125.271c0,24.709-20,44.709-44.708,44.709s-44.667-20-44.667-44.709  c0-24.708,19.959-44.708,44.667-44.708S423.333,100.562,423.333,125.271z"/>
+          <path class="dot dot-first animated" d="M178.083,125.271c0,24.709-20,44.709-44.708,44.709c-24.667,0-44.708-20-44.708-44.709  c0-24.708,20.041-44.708,44.708-44.708C158.083,80.562,178.083,100.562,178.083,125.271z"/>
+          <path class="u animated" d="M256.042,512c-87.167,0-158.167-70.875-158.167-158.083V244.604c0-18.042,14.688-32.771,32.812-32.771  c18.083,0,32.771,14.729,32.771,32.771v109.312c0,51.041,41.562,92.583,92.584,92.583c51.041,0,92.541-41.542,92.541-92.583V244.604  c0-18.042,14.667-32.771,32.75-32.771c18.167,0,32.792,14.729,32.792,32.771v109.312C414.083,441.125,343.167,512,256.042,512  L256.042,512z"/>
+
+        </svg>
+        <h2 class="loading-text">
+          <span class="letter">W</span>
+          <span class="letter">E</span>
+          <span class="letter">L</span>
+          <span class="letter">C</span>
+          <span class="letter">O</span>
+          <span class="letter">M</span>
+          <span class="letter">E</span>
+          <br>
+          <span class="letter">T</span>
+          <span class="letter">O</span>
+          <br>
+          <span class="letter">O</span>
+          <span class="letter">P</span>
+          <span class="letter">U</span>
+          <span class="letter" style="padding-right:1rem">S</span>
+          
+          <span class="letter">W</span>
+          <span class="letter">E</span>
+          <span class="letter">B</span>
+        </h2>
+      </div>
+    </div>
     <router-outlet></router-outlet>
   </nav>
 </div>
