update navbar fix

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,7 +42,7 @@
       </ul>
       <div class="Dropdown" style="float:right">
   <div class="Dropdown-profile">
-    <span class="Name">{{name}}</span>
+    <span class="Name">{{ navbarService.getUsername() | async }}</span>
     <span class="MenuIcon">
       <span class="MenuIcon-line"></span>
       <span class="MenuIcon-line"></span>
