--- a/src/app/product-view/product-view.component.html
+++ b/src/app/product-view/product-view.component.html
@@ -45,12 +45,12 @@
                             <hr>
                                        Genre : {{productDetails.subCategory.subCategory}}<br>
                                         Artist  : <a id="{{productDetails.artistId}}" (click)="viewProfile($event)" style="color:blue">{{productDetails.user.fullName}}</a><br>
-                                        Size: 17.5" x 13.5" Inch<br>
+                                        Size: {{productDetails.size}}<br>
                                         Signed : Yes<br>
                                         Orientation : {{productDetails.Orientation}}<br>
-                                        Material : Canvas<br>
-                                        Medium : Pencil<br>
-                                        Weight(approx) in gm : 500 gm with package<br>
+                                        Material : {{productDetails.buildOn}}<br>
+                                        Medium : {{productDetails.medium}}<br>
+                                        Weight(approx) in gm : {{productDetails.weight}} with package<br>
                                         Price : Rs. {{productDetails.price}}
                             <hr>
                         </div>
@@ -74,8 +74,7 @@
                         <label class="label" for="tab-1">Description</label><div class="panel">
                         <p> ― {{productDetails.user.fullName}}</p>      
                                  <blockquote cite="https://www.goodreads.com/quotes/tag/himalayas">
-                                  "This type of  scene is very common in Nepalese society.I got this scenario when I was wandering with my daughter Sakshi in Murli Chwok of Birjung.It tooks me 3 days to draw this in canvas."
-                                  
+                                    {{productDetails.description}}                                  
                                  </blockquote> 
                         </div>
                         
