--- a/src/app/admin/all-delivered-product/all-delivered-product.component.html
+++ b/src/app/admin/all-delivered-product/all-delivered-product.component.html
@@ -5,6 +5,7 @@
         <th>Email</th>
         <th>Phone</th>
         <th>Alt Phone</th>
+        <th>Created Date</th>
         <th>View Products</th>
     </tr>
 
@@ -14,6 +15,7 @@
         <td>{{ product.buyer.email }}</td>
         <td>{{ product.buyer.Phone}}</td>
         <td>{{ product.alt_phone}}</td>
+        <td>{{ product.created_at }}</td>
         <td> <a (click)="toggleShowProducts(product)"> Toggle</a></td>
     </tr>
 </table>
@@ -23,11 +25,11 @@
           <div class="card card--big" *ngFor="let product of selectedProduct.delivery_products">
             <img class="card__image" [src]="product.products.image" alt="custom_art_image">
       
-            <h2 class="card__title">{{ product.products.Name }}</h2>
+            <h2 class="card__title" (click)="viewProductDetail(product.productId)" >  {{ product.products.Name }} </h2>
             <p class="card__text">Orientation: {{ product.products.Orientation }}</p>
             <p class="card__text">Build On:  {{ product.products.buildOn }}</p>
             <p class="card__text">Medium: {{ product.products.medium }}</p>
-            <p class="card__text">Size: {{ product.proucts.size }}</p>
+            <p class="card__text">Size: {{ product.products.size }}</p>
    
           </div>
         </div>
