--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
     <li tabindex="6" class="icon-notverifiedartist"> <a class="nav-link" routerLink="/admin/notdeliveredarts" routerLinkActive="active">View
         Not Delivered Arts</a></li>
     <li tabindex="6" class="icon-notverifiedartist"> <a class="nav-link" routerLink="/admin/alldeliveredproduct" routerLinkActive="active">View
-      Not Delivered Products</a></li>
+     Delivered Products</a></li>
     <li tabindex="6" class="icon-notverifiedartist"> <a class="nav-link" routerLink="/admin/allundeliveredproduct" routerLinkActive="active">View
       Not Delivered Products</a></li>
   </ul>
