--- a/src/app/admin/all-undelivered-product/all-undelivered-product.component.html
+++ b/src/app/admin/all-undelivered-product/all-undelivered-product.component.html
@@ -1,3 +1,57 @@
-<p>
-  all-undelivered-product works!
-</p>
+<div *ngIf="products && products.length > 0">
+    <table>
+        <tr>
+            <th>Buyer Id</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Alt Phone</th>
+            <th>Address</th>
+            <th>Alternate Address</th>
+            <th>Created Date</th>
+            <th>Actions </th>
+        </tr>
+      
+        <tr *ngFor="let product of products">
+            <td>{{ product.buyer.id }}</td>
+            <td>{{ product.buyer.fullName }}</td>
+            <td>{{ product.buyer.email }}</td>
+            <td>{{ product.buyer.Phone}}</td>
+            <td>{{ product.alt_phone}}</td>
+            <td>
+                  <address>
+                      {{ product.default_address.address_line_1}} {{ product.default_address.address_line_2}}
+                      {{ product.default_address.country}} {{ product.default_address.city}}
+                      {{ product.default_address.province}} {{ product.default_address.postal_code}}
+                  </address>
+              </td>
+              <td>{{product.alt_address}}</td>
+            <td>{{ product.created_at }}</td>
+            <td> 
+              <a (click)="toggleShowProducts(product)"> Toggle</a>
+              <button (click)="changeDeliveryStatus(product.id)">Change Status</button>
+              <button (click)="deleteProductDelivery(product.id)">Delete</button>
+      
+            </td>
+        </tr>
+      </table>
+      
+      <div class="container helper" *ngIf="showProduct">
+            <div class="row">
+              <div class="card card--big" *ngFor="let product of selectedProduct.delivery_products">
+                <img class="card__image" [src]="product.products.image" alt="custom_art_image">
+          
+                <h2 class="card__title" (click)="viewProductDetail(product.productId)" >  {{ product.products.Name }} </h2>
+                <p class="card__text">Orientation: {{ product.products.Orientation }}</p>
+                <p class="card__text">Build On:  {{ product.products.buildOn }}</p>
+                <p class="card__text">Medium: {{ product.products.medium }}</p>
+                <p class="card__text">Size: {{ product.products.size }}</p>
+       
+              </div>
+            </div>
+          
+          </div>
+          
+      
+      
+</div>
