--- a/src/app/product-upload/product-upload.component.html
+++ b/src/app/product-upload/product-upload.component.html
@@ -1,41 +1,104 @@
-<div class="login-page">
-    
-    <div class="banner">Upload<strong> Product</strong></div>
-       <div class="form">
-           <form [formGroup]="ProductUploadForm" (ngSubmit)="onSubmit()">
-             <div class="form-group">
-                 <label for="name"class=" form-control-label"></label>
+
+<div class="container">
+	<div class="row">
+		<section style="width:80%;margin-left:10%">
+        <div class="wizard">
+            <div class="wizard-inner">
+                <div class="connecting-line"></div>
+                <ul class="nav nav-tabs" role="tablist">
+
+                    <li role="presentation" >
+                        <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Step 1">
+                            <span class="round-tab">
+                                <i class="fa fa-folder-open"></i>
+                            </span>
+                        </a>
+                    </li>
+
+                    <li role="presentation" >
+                        <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Step 2">
+                            <span class="round-tab">
+                                <i class="fa fa-pencil"></i>
+                            </span>
+                        </a>
+                    </li>
+                   
+
+                    <li role="presentation" >
+                        <a href="#complete" data-toggle="tab" aria-controls="complete" role="tab" title="Complete">
+                            <span class="round-tab">
+                                <i class="fa fa-check"></i>
+                            </span>
+                        </a>
+                    </li>
+                </ul> 
+            </div>
+
+            <form role="form" style="background-color: white">
+                <div class="tab-content">
+                    <div class="tab-pane active" role="tabpanel" id="step1">
+                      <div class="login-page">
+     <div class="banner" style="width:80%; margin-left:10%">Upload<strong> Product</strong></div>
+                        <div class="form">
+                          <form [formGroup]="ProductUploadForm" (ngSubmit)="onSubmit()">
+                             <div class="form-group">
+                 <label for="name"class=" form-control-label" style="font-weight: bold">Product Name:</label>
                   <input type="text" name="name" class="form-control" value="" formControlName="name" placeholder="Product Name">
              </div>
              <div class="form-group">
-                 <label for="orientation"class=" form-control-label"></label>
+                 <label for="orientation"class=" form-control-label" style="font-weight: bold">Orientation:</label>
                  <input type="text" name="orientation" class="form-control" value="" formControlName="orientation" placeholder="Orientation">
              </div>
              <div class="form-group">
-                 <label for="builOn"class=" form-control-label">Build On:</label>
-                <input type="text" name="buildOn" class="form-control" value="" formControlName="buildOn" >
+                 <label for="builOn"class=" form-control-label" style="font-weight: bold">Build On:</label>
+                <input type="text" name="buildOn" class="form-control" value="" formControlName="buildOn" placeholder="Build On">
              </div>
-             <div class="form-group">
-                 <label for="price"class=" form-control-label"></label>
+                    
+                   
+                    
+                    
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pane" role="tabpanel" id="step2">
+                        <div class="login-page">
+     <div class="banner" style="width:80%; margin-left:10%">Upload<strong> Product</strong></div>
+                            <div class="form">
+                              <form [formGroup]="ProductUploadForm" (ngSubmit)="onSubmit()">
+                                 <div class="form-group">
+                 <label for="price"class=" form-control-label" style="font-weight: bold">Price:</label>
                  <input type="number" name="price" class="form-control" value="" formControlName="price" placeholder="Price">
              </div>
              <div class="form-group">
-                 <label for="availability"class=" form-control-label"></label>
+                 <label for="availability"class=" form-control-label" style="font-weight: bold">Availability:</label>
                  <input type="text" name="availability" class="form-control" value="" formControlName="availability" placeholder="Availability">
              </div>
-           
-             <div class="form-group">
+                                </form>
+                                </div>
+</div>
+                              
+                            
+                    </div>
+                   
+                    <div class="tab-pane" role="tabpanel" id="complete">
+                        <div class="login-page">
+     <div class="banner" style="width:80%; margin-left:10%">Upload<strong> Product</strong></div>
+                            <div class="form">
+                              <form [formGroup]="ProductUploadForm" (ngSubmit)="onSubmit()">
+                              
+                          <div class="form-group">
                <label for="Category">Category:
                  <select class="form-control" formControlName="Category" [(ngModel)]="selectedCategory"(change)="selectCategory($event)" style="height:50px">
                    
-                   <option [ngValue]="undefined" disabled> Select </option>
+                   <option [ngValue]="undefined" disabled style="font-weight: bold"> Select </option>
                    <option [value]="category.id" *ngFor="let category of Categories">  
                          {{category.Category}}
                   
                  </select>
                </label>
              <div class="form-group">
-                 <label for="SubCategory">Sub-Category:
+                 <label for="SubCategory" style="font-weight: bold">Sub-Category:
                  <select class="form-control" formControlName="SubCategory" [(ngModel)]="selectedSubCategory"(change)="selectSubCategory($event)" style="height:50px">
                    
                    <option [ngValue]="undefined" disabled> Select </option>
@@ -46,19 +109,37 @@
                </label>
              </div>
              <div class="form-group">
-               <label for="product" class=" form-control-label">Product:</label>
+               <label for="product" class=" form-control-label" style="font-weight: bold">Product:</label>
                <input type="file" accept="image/*" (change)="onProductSelect($event)" name="product" value="" class="form-control-file" formControlName="product">
                
              </div>
                
              </div>
              <button type="submit"  name="button" [disabled]="!ProductUploadForm.valid">Upload</button>
-             
-           </form>
-       
-         </div>
-         
-  
-   
+                                </form>
+                                </div>
+</div>
+        
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </form>
+        </div>
+    </section>
    </div>
-   
+</div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Success!</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Your request is being processed!</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark"   (click)="modal.close('Save click'); ">OK</button>
+  </div>
+</ng-template>
