--- a/src/app/admin/all-delivered-product/all-delivered-product.component.html
+++ b/src/app/admin/all-delivered-product/all-delivered-product.component.html
@@ -1,39 +1,93 @@
-<table>
-    <tr>
-        <th>Buyer Id</th>
+
+
+  <div class="container">
+	<div class="col-md-12">
+    	<div class="panel panel-default">
+				<div class="panel-heading">
+					Not-Delivered Products
+				</div>
+        <div class="panel-body">
+					<table class="table table-condensed table-striped">
+    <thead>
+        <tr>
+					 <th>Buyer Id</th>
         <th>Name</th>
         <th>Email</th>
         <th>Phone</th>
         <th>Alt Phone</th>
         <th>Created Date</th>
         <th>View Products</th>
-    </tr>
+        </tr>
+    </thead>
 
-    <tr *ngFor="let product of products">
-        <td>{{ product.buyer.id }}</td>
+    <tbody>
+           <tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle" *ngFor="let product of products">
+                   <td>{{ product.buyer.id }}</td>
         <td>{{ product.buyer.fullName }}</td>
         <td>{{ product.buyer.email }}</td>
         <td>{{ product.buyer.Phone}}</td>
         <td>{{ product.alt_phone}}</td>
         <td>{{ product.created_at }}</td>
-        <td> <a (click)="toggleShowProducts(product)"> Toggle</a></td>
-    </tr>
+        <td> <button class="btn btn-default btn-xs"><span class="fa fa-eye"></span></button></td>
+        </tr>
+			
+        <tr>
+            <td colspan="12" class="hiddenRow">
+							<div class="accordian-body collapse" id="demo1" > 
+                                    <div  *ngIf="showProduct">
+              <table class="table table-striped" >
+                      <thead>
+                        <tr class="info">
+													<th>Image</th>
+													<th>Product Name</th>
+													<th>Orientation</th>		
+													<th>Made On</th>	
+													<th>Medium</th>	
+													<th>Size</th>	
+												</tr>
+											</thead>	
+								  		
+											<tbody>
+												
+                        <tr data-toggle="collapse"  class="accordion-toggle" data-target="#demo10"  *ngFor="let product of selectedProduct.delivery_products">
+													<td> <a href="#"> <img  [src]="product.products.image" alt="custom_art_image"></a></td>
+													<td>{{ product.products.Name }}</td>
+													<td>{{ product.products.Orientation }} </td>
+													<td>  {{ product.products.buildOn }}</td>
+													<td> {{ product.products.medium }}</td>
+													<td> 
+                                                            {{ product.products.size }}
+													</td>
+												</tr>
+												
+		
+						
+												
+														
+                       
+												
+														
+                       
+								
+               
+                      </tbody>
+               	</table>
+              </div>
+              </div> 
+          </td>
+        </tr>
+      
+      
+			
+       
+       
+       
+    </tbody>
 </table>
-
-<div class="container helper" *ngIf="showProduct">
-        <div class="row">
-          <div class="card card--big" *ngFor="let product of selectedProduct.delivery_products">
-            <img class="card__image" [src]="product.products.image" alt="custom_art_image">
-      
-            <h2 class="card__title" (click)="viewProductDetail(product.productId)" >  {{ product.products.Name }} </h2>
-            <p class="card__text">Orientation: {{ product.products.Orientation }}</p>
-            <p class="card__text">Build On:  {{ product.products.buildOn }}</p>
-            <p class="card__text">Medium: {{ product.products.medium }}</p>
-            <p class="card__text">Size: {{ product.products.size }}</p>
-   
-          </div>
-        </div>
-      
+            </div>
+        
+          </div> 
+        
       </div>
-      
-
+	</div>
+ 
