--- a/src/app/admin/all-undelivered-product/all-undelivered-product.component.html
+++ b/src/app/admin/all-undelivered-product/all-undelivered-product.component.html
@@ -1,57 +1,104 @@
-<div *ngIf="products && products.length > 0">
-    <table>
-        <tr>
-            <th>Buyer Id</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>Alt Phone</th>
-            <th>Address</th>
-            <th>Alternate Address</th>
-            <th>Created Date</th>
-            <th>Actions </th>
-        </tr>
+
+  <div class="container" *ngIf="products && products.length > 0">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="banner">Not-<strong>Delivered </strong>Products</div>
+          <div class="panel-body">
+            <table class="table table-condensed table-striped">
+      <thead>
+          <tr>
+             <th style="    width: 8%;">Buyer Id</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Phone</th>
+       <th>Address</th>
+          <th>Alternate Address</th>
+          <th>Alt Phone</th>
+          <th>Created Date</th>
+          <th style="width:14%">View Products</th>
+          </tr>
+      </thead>
+  
+      <tbody>
+             <tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle" *ngFor="let product of products">
+                     <td>{{ product.buyer.id }}</td>
+          <td>{{ product.buyer.fullName }}</td>
+          <td>{{ product.buyer.email }}</td>
+      <td>
+              <address>
+                  {{ product.default_address.address_line_1}} {{ product.default_address.address_line_2}}
+                  {{ product.default_address.country}} {{ product.default_address.city}}
+                  {{ product.default_address.province}} {{ product.default_address.postal_code}}
+              </address>
+          </td>
+    
+          <td>{{product.alt_address}}</td>
+          <td>{{ product.buyer.Phone}}</td>
+          <td>{{ product.alt_phone}}</td>
+          <td>{{ product.created_at }}</td>
+          <td> <button class="btn btn-default btn-xs" (click)="toggleShowProducts(product)" style="background-color: rgb(12, 185, 99); color:white; border: none; margin: 2%;     padding: 7px 11px;"> <span class="fa fa-eye"></span> </button>
+            <button class="btn btn-default btn-xs" style="background-color: slateblue; color:white; border: none; margin: 2%;     padding: 7px 11px;" (click)="changeDeliveryStatus(product.id)"><span class="fa fa-pencil"></span></button>
+                <button  class="btn btn-default btn-xs" style="background-color: red; color:white; border: none; margin: 2%;     padding: 7px 11px;" (click)="deleteProductDelivery(product.id)"><span class="fa fa-trash"></span></button>
+          </td>
+          </tr>
+        
+          <tr>
+              <td colspan="12" class="hiddenRow">
+                <div class="accordian-body collapse" id="demo1"   *ngIf="showProduct"> 
+                                      
+                <table class="table table-striped" >
+                        <thead>
+                          <tr class="info">
+                            <th>Image</th>
+                            <th>Product Name</th>
+                            <th>Orientation</th>		
+                            <th>Made On</th>	
+                            <th>Medium</th>	
+                            <th>Size</th>	
+                          </tr>
+                        </thead>	
+                        
+                        <tbody>
+                          
+                          <tr data-toggle="collapse"  class="accordion-toggle" data-target="#demo10"  *ngFor="let product of selectedProduct.delivery_products">
+                            <td> <a href="#"> <img  [src]="product.products.image" alt="custom_art_image" style="width:50px"></a></td>
+                            <td>{{ product.products.Name }}</td>
+                            <td>{{ product.products.Orientation }} </td>
+                            <td>  {{ product.products.buildOn }}</td>
+                            <td> {{ product.products.medium }}</td>
+                            <td> 
+                                                              {{ product.products.size }}
+                            </td>
+                          </tr>
+                          
       
-        <tr *ngFor="let product of products">
-            <td>{{ product.buyer.id }}</td>
-            <td>{{ product.buyer.fullName }}</td>
-            <td>{{ product.buyer.email }}</td>
-            <td>{{ product.buyer.Phone}}</td>
-            <td>{{ product.alt_phone}}</td>
-            <td>
-                  <address>
-                      {{ product.default_address.address_line_1}} {{ product.default_address.address_line_2}}
-                      {{ product.default_address.country}} {{ product.default_address.city}}
-                      {{ product.default_address.province}} {{ product.default_address.postal_code}}
-                  </address>
-              </td>
-              <td>{{product.alt_address}}</td>
-            <td>{{ product.created_at }}</td>
-            <td> 
-              <a (click)="toggleShowProducts(product)"> Toggle</a>
-              <button (click)="changeDeliveryStatus(product.id)">Change Status</button>
-              <button (click)="deleteProductDelivery(product.id)">Delete</button>
-      
+              
+                          
+                              
+                         
+                          
+                              
+                         
+                  
+                 
+                        </tbody>
+                   </table>
+               
+                </div> 
             </td>
-        </tr>
-      </table>
-      
-      <div class="container helper" *ngIf="showProduct">
-            <div class="row">
-              <div class="card card--big" *ngFor="let product of selectedProduct.delivery_products">
-                <img class="card__image" [src]="product.products.image" alt="custom_art_image">
-          
-                <h2 class="card__title" (click)="viewProductDetail(product.productId)" >  {{ product.products.Name }} </h2>
-                <p class="card__text">Orientation: {{ product.products.Orientation }}</p>
-                <p class="card__text">Build On:  {{ product.products.buildOn }}</p>
-                <p class="card__text">Medium: {{ product.products.medium }}</p>
-                <p class="card__text">Size: {{ product.products.size }}</p>
-       
+          </tr>
+        
+        
+        
+         
+         
+         
+      </tbody>
+  </table>
               </div>
-            </div>
           
-          </div>
+            </div> 
           
-      
-      
-</div>
+        </div>
+    </div>
+   
