--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -40,10 +40,13 @@
         </li>
 
       </ul>
-      <div class="Dropdown" style="float:right">
+      <div class="Dropdown" style="float:right; width:unset">
   <div class="Dropdown-profile">
-    <img src="//s3-us-west-2.amazonawsa.com/s.cdpn.io/33381/profile/profile-80.jpg?1" class="Photo"  />
-    <span class="Name">Michael Lee</span>
+   
+    <span class="Name" style="
+    width: -webkit-fill-available;
+    padding-right: 30px;
+">Michael Lee</span>
     <span class="MenuIcon">
       <span class="MenuIcon-line"></span>
       <span class="MenuIcon-line"></span>
