--- a/src/app/admin/image-verification/image-verification.component.css
+++ b/src/app/admin/image-verification/image-verification.component.css
@@ -143,5 +143,13 @@
   .card--big .card__action-bar {
     left: 0;
   }
-  
+  .modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999999;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+}
   
