--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -118,7 +118,7 @@
                           </a>
                           </div>
                         </div>
-                        <a id = "{{prod.subCategoryId}}" (click)="showMore($event)" class="btn btn-outline-dark" *ngIf="i == 4" style="color:white;cursor: pointer"> Show more</a>
+                        <a id = "{{prod.subCategoryId}}" (click)="showMore($event)" class="btn btn-outline-dark" *ngIf="i == 4" style="color:white;cursor: pointer; z-index:999999999999"> Show more</a>
                       </div>   
           
                     </div>
